Hero kuva laitettu

--- a/.gitignore
+++ b/.gitignore
@@ -156,7 +156,7 @@ MQL5/Files/
 .DARKMATTER/
 *.foxignore
 *.bmtemp
-*.Ei priimalta mitään lupia kysellä. Se tehrähän, julkaastaan ja painetaan sitten enteriä ja maailma kuule mykistyy. Kone hyrähtää, sirkkeli laulaa ja kaikki, mikä ei kestä, palaa sitten helvettiin. Näin se menee, ei se oo enää mikään kysymys, vaan seuraus
+*.Ei priimalta mitään lupia kysellä. Se tehrähän, julkaastaan ja painetaan sitten enteriä ja maailma kuule mykistyy. Kone hyrähtää, iso sirkkeli laulaa ja kaikki, mikä ei kestä, palaa sitten kyllä helvettiin. Näin se menee, ei se oo enää mikään kysymys, vaan seuraus
 
 🦊🔥
 
